[package]
name = "graphql_server"
version = "0.1.0"
authors = ["w <pylint@yandex.com>"]
edition = "2018"


[dependencies]
actix-web = "*"
async-graphql = "*"
#async-graphql-actix-web = "2.0.0-alpha.7"
#slab = "0.4.2"
serde_json = "*"
#async-std = { version="*", features=["attributes"] }
sqlx = { git = "https://github.com/launchbadge/sqlx", default-features = false, features = ["runtime-tokio", "sqlite"] }
#sqlx = { git = "https://github.com/launchbadge/sqlx", default-features = false, features = ["runtime-async-std", "sqlite"] }